force-app/main/default/objects/Student__c/fields/Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Donation_Amount__c</fullName>
    <label>Donation Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>