force-app/main/default/objects/Student__c/fields/Exam_Fees_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Exam_Fees_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exam Fees Submitted ?</label>
    <type>Checkbox</type>
</CustomField>