force-app/main/default/objects/Student__c/fields/Father_s_phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Father_s_phone_Number__c</fullName>
    <label>Father&apos;s phone Number</label>
    <type>Phone</type>
</CustomField>