force-app/main/default/objects/Student__c/fields/Fee_Submited__c.field-meta.xml
<CustomField>
    <fullName>Fee_Submited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Submited ?</label>
    <type>Checkbox</type>
</CustomField>