force-app/main/default/objects/Student__c/fields/First_Sem_Back__c.field-meta.xml
<CustomField>
    <fullName>First_Sem_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Sem Back ?</label>
    <type>Checkbox</type>
</CustomField>