force-app/main/default/objects/Student__c/fields/First_Sem_Percentage__c.field-meta.xml
<CustomField>
    <fullName>First_Sem_Percentage__c</fullName>
    <label>First Sem Percentage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>