force-app/main/default/objects/Student__c/fields/Fourth_Sem_Back__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Sem_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fourth Sem Back ?</label>
    <type>Checkbox</type>
</CustomField>