force-app/main/default/objects/Student__c/fields/Info_Link__c.field-meta.xml
<CustomField>
    <fullName>Info_Link__c</fullName>
    <label>Info Link</label>
    <type>Url</type>
</CustomField>