force-app/main/default/objects/Student__c/fields/Is_Donation__c.field-meta.xml
<CustomField>
    <fullName>Is_Donation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Donation ?</label>
    <type>Checkbox</type>
</CustomField>