force-app/main/default/objects/Student__c/fields/OverAll_Grade__c.field-meta.xml
<CustomField>
    <fullName>OverAll_Grade__c</fullName>
    <label>OverAll Grade</label>
    <length>2</length>
    <type>Text</type>
</CustomField>