force-app/main/default/objects/Student__c/fields/Pending_Overall_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Overall_Amount__c</fullName>
    <label>Pending Overall Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>