force-app/main/default/objects/Student__c/fields/secions__c.field-meta.xml
<CustomField>
    <fullName>secions__c</fullName>
    <label>secions</label>
    <length>5</length>
    <type>Text</type>
</CustomField>