force-app/main/default/objects/Student__c/fields/Second_Sem_Back__c.field-meta.xml
<CustomField>
    <fullName>Second_Sem_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Sem Back ?</label>
    <type>Checkbox</type>
</CustomField>