force-app/main/default/objects/Student__c/fields/Second_Sem_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Second_Sem_Percentage__c</fullName>
    <label>Second Sem Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>