force-app/main/default/objects/Student__c/fields/Third_Sem_Back__c.field-meta.xml
<CustomField>
    <fullName>Third_Sem_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Sem Back ?</label>
    <type>Checkbox</type>
</CustomField>