force-app/main/default/objects/Student__c/fields/Year_of_Class__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Year of Class</label>
    <referenceTo>Year_of_Class__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>