force-app/main/default/objects/Student__c/recordTypes/Students.recordType-meta.xml
<RecordType>
    <fullName>Students</fullName>
    <active>true</active>
    <label>Students</label>
</RecordType>